--- a/ParentsBank/Views/AccountDetails/Delete.cshtml
+++ b/ParentsBank/Views/AccountDetails/Delete.cshtml
@@ -51,6 +51,14 @@
             @Html.DisplayFor(model => model.InterestRate)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Balance)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Balance)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
