--- a/ParentsBank/Views/AccountDetails/Details.cshtml
+++ b/ParentsBank/Views/AccountDetails/Details.cshtml
@@ -50,6 +50,14 @@
             @Html.DisplayFor(model => model.InterestRate)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Balance)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Balance)
+        </dd>
+
     </dl>
 </div>
 <p>
