--- a/ParentsBank/Views/Transactions/Delete.cshtml
+++ b/ParentsBank/Views/Transactions/Delete.cshtml
@@ -20,6 +20,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Account.Recipient)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Account.Recipient)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.TransactionDate)
         </dt>
 
