--- a/ParentsBank/Views/Transactions/Details.cshtml
+++ b/ParentsBank/Views/Transactions/Details.cshtml
@@ -15,6 +15,14 @@
         </dt>
 
         <dd>
+            @Html.DisplayFor(model => model.Account.Recipient)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Account.Recipient)
+        </dt>
+
+        <dd>
             @Html.DisplayFor(model => model.Account.Owner)
         </dd>
 
