--- a/ParentsBank/Views/WishlistItems/Details.cshtml
+++ b/ParentsBank/Views/WishlistItems/Details.cshtml
@@ -19,6 +19,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Account.Recipient)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Account.Recipient)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.DateAdded)
         </dt>
 
