--- a/ParentsBank/Views/AccountDetails/Edit.cshtml
+++ b/ParentsBank/Views/AccountDetails/Edit.cshtml
@@ -6,7 +6,6 @@
 
 <h2>Edit</h2>
 
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -16,11 +15,13 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
+        @Html.HiddenFor(model => model.Owner)
+        @Html.HiddenFor(model => model.Balance)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Owner, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Owner, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Owner, new { htmlAttributes = new { @class = "form-control readonly", @readonly = "readonly" } })
                 @Html.ValidationMessageFor(model => model.Owner, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -28,7 +29,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Recipient, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Recipient, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Recipient, new { htmlAttributes = new { @class = "form-control readonly", @readonly = "readonly" } })
                 @Html.ValidationMessageFor(model => model.Recipient, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -44,7 +45,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.OpenDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.OpenDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.OpenDate, new { htmlAttributes = new { @class = "form-control readonly", @readonly = "readonly" } })
                 @Html.ValidationMessageFor(model => model.OpenDate, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -68,7 +69,3 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
