--- a/ParentsBank/Views/AccountDetails/Index.cshtml
+++ b/ParentsBank/Views/AccountDetails/Index.cshtml
@@ -26,6 +26,9 @@
         <th>
             @Html.DisplayNameFor(model => model.InterestRate)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Balance)
+        </th>
         <th></th>
     </tr>
 
@@ -45,6 +48,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.InterestRate)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Balance)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
