--- a/ParentsBank/Views/Shared/_Layout.cshtml
+++ b/ParentsBank/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li><a href="/AccountDetails/" title="Accounts">Accounts</a></li>
+                    <li><a href="/Transactions/" title="Transactions">Transactions</a></li>
+                    <li><a href="/WishlistItems/" title="Wishlist Items">Wishlist Items</a></li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
