--- a/ParentsBank/Views/Transactions/Edit.cshtml
+++ b/ParentsBank/Views/Transactions/Edit.cshtml
@@ -6,7 +6,6 @@
 
 <h2>Edit</h2>
 
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -20,7 +19,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AccountId, "AccountId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("AccountId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("AccountId", null, htmlAttributes: new { @class = "form-control readonly", @readonly = "readonly" })
                 @Html.ValidationMessageFor(model => model.AccountId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -60,7 +59,3 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
