--- a/ParentsBank/Views/Transactions/Index.cshtml
+++ b/ParentsBank/Views/Transactions/Index.cshtml
@@ -15,6 +15,9 @@
             @Html.DisplayNameFor(model => model.Account.Owner)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.Account.Recipient)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.TransactionDate)
         </th>
         <th>
@@ -30,6 +33,9 @@
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Account.Owner)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Account.Recipient)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.TransactionDate)
