--- a/ParentsBank/Views/WishlistItems/Index.cshtml
+++ b/ParentsBank/Views/WishlistItems/Index.cshtml
@@ -15,6 +15,9 @@
             @Html.DisplayNameFor(model => model.Account.Owner)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.Account.Recipient)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.DateAdded)
         </th>
         <th>
@@ -36,6 +39,9 @@
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Account.Owner)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Account.Recipient)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.DateAdded)
