--- a/ParentsBank/Views/Shared/_Layout.cshtml
+++ b/ParentsBank/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+                     <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
@@ -24,6 +24,10 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+
+                    <li><a href="http://localhost:53416/Home/About"></a></li>
+                    <li><a href="http://localhost:53416/Home/Contact"></a></li>
+                    <li></li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
