--- a/ParentsBank/Views/WishlistItems/Delete.cshtml
+++ b/ParentsBank/Views/WishlistItems/Delete.cshtml
@@ -64,7 +64,8 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Purchased)
+            @Html.DisplayFor(model => model.Purchased)<br />
+            @Html.ValidationMessageFor(model => model.Purchased, "", new { @class = "text-danger" })
         </dd>
 
     </dl>
