--- a/ParentsBank/Views/Transactions/Edit.cshtml
+++ b/ParentsBank/Views/Transactions/Edit.cshtml
@@ -19,7 +19,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AccountId, "AccountId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("AccountId", null, htmlAttributes: new { @class = "form-control readonly", @readonly = "readonly" })
+                @Html.DropDownList("AccountId", null, htmlAttributes: new { @class = "form-control disabled", @disabled = "disabled" })
                 @Html.ValidationMessageFor(model => model.AccountId, "", new { @class = "text-danger" })
             </div>
         </div>
