--- a/ParentsBank/Views/Home/Index.cshtml
+++ b/ParentsBank/Views/Home/Index.cshtml
@@ -3,21 +3,25 @@
 }
 
 <html>
-<body>
+<body style="background-color:#13ecec">
 
 
 
 
-    <div class="jumbotron" > 
+    <div class="jumbotron"> 
+         <font color="white" face="Cambria" > 
         
-        <align-left><h2><font color="white"> Welcome to ParentsBank</font></h2></align-left>
-        <center><p><strong><font color="white"> The Sky is the limit with ParentsBank:</font></strong></p></center>
-        <ol class="jumboUl">
-          <li class="bullet-1">Create an account</li>  
-          <li class="bullet-2">Keep track of your transactions</li>
-          <li class="bullet-3">Budget for Items you see in your near future</li>
-        </ol>
+        <align-left><h2><b><font face="Felix Titling" size="32">Welcome to ParentsBank</font></b></h2></align-left>
+        <p><strong>The sky is the limit and we can help you make important financial decisions:</strong></p>
         
+            <div class="numberCircle">1 </div>
+            
+             <p>Create an account</p> 
+            <div class="numberCircle">2 </div>
+             <p>Keep track of your transactions</p>
+             <div class="numberCircle">3</div>
+             <p>Budget for Items you see in your near future</p>
+             </font>
          <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
     </div>
 
@@ -27,11 +31,12 @@
             <p>
                 Hard work pays off! Open an account today!
             </p>
+         
             <p><a class="btn btn-default" href="/Account/Register/" title="Register">Register</a></p>
         </div>
         <div class="col-md-4">
             <h2>Get More </h2>
-            <p>Save for Items up hope to one day have with our Wishlist feature.</p>
+            <p>Save up for Items with our Wishlist feature.</p>
             <p><a class="btn btn-default" href="/WishlistItems/" title="Wishlist Items">Wishlist Items</a></p>
         </div>
        
