--- a/ParentsBank/Content/Site.css
+++ b/ParentsBank/Content/Site.css
@@ -25,6 +25,7 @@ textarea {
 
 .jumboUl {
     color: white;
+    
 }
 
 .jumbotron {
@@ -32,4 +33,25 @@ textarea {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
+}
+
+
+.btn {
+    background-color: white;
+    color: black; 
+
+}
+
+.numberCircle {
+    border-radius: 50%;
+    width: 36px;
+    height: 36px;
+    padding:1px;
+    background: orange;
+    border: 2px solid #666;
+    color:black;
+    text-align: center;
+    font: 32px, Arial, sans-serif;
+
 }
