--- a/ParentsBank/Views/AccountDetails/Details.cshtml
+++ b/ParentsBank/Views/AccountDetails/Details.cshtml
@@ -61,8 +61,11 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) 
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("View Transactions", "Index", new { id = Model.Id }) |
+    @Html.ActionLink("View Wishlist", "Index", new { id = Model.Id})
     @if (ViewBag.Role == "Owner") {
          <span>|</span> @Html.ActionLink("Back to List", "Index")
     }
+    
 </p>
