--- a/ParentsBank/Views/WishlistItems/Index.cshtml
+++ b/ParentsBank/Views/WishlistItems/Index.cshtml
@@ -11,6 +11,17 @@
 </p>
 @if (Model.Count() > 0)
 {
+    float completedItems = (float) ViewBag.CompletedItems * 100 / Model.Count();
+    float affordableItems = (float) ViewBag.AffordableItems * 100 / Model.Count();
+    float remainingItems = 100 - completedItems - affordableItems;
+    <div class="progress">
+        <div class="progress-bar progress-bar-success" role="progressbar" style="width:@completedItems%" title="@ViewBag.CompletedItems Purchased">
+        </div>
+        <div class="progress-bar progress-bar-warning" role="progressbar" style="width:@affordableItems%" title="@ViewBag.affordableItems Affordable">
+        </div>
+        <div class="progress-bar progress-bar-danger" role="progressbar" style="width:@remainingItems%" title="@(Model.Count() - ViewBag.CompletedItems - ViewBag.affordableItems) Remaining">
+        </div>
+    </div>
     <table class="table">
         <tr>
             <th>
