--- a/ParentsBank/Views/Home/Index.cshtml
+++ b/ParentsBank/Views/Home/Index.cshtml
@@ -5,22 +5,19 @@
 <html>
 <body style="background-color:#13ecec">
 
-
-
-
     <div class="jumbotron"> 
          <font color="white" face="Cambria" > 
         
         <align-left><h2><b><font face="Felix Titling" size="32">Welcome to ParentsBank</font></b></h2></align-left>
         <p><strong>The sky is the limit and we can help you make important financial decisions:</strong></p>
         
-            <div class="numberCircle">1 </div>
             
-             <p>Create an account</p> 
-            <div class="numberCircle">2 </div>
-             <p>Keep track of your transactions</p>
-             <div class="numberCircle">3</div>
-             <p>Budget for Items you see in your near future</p>
+            
+             <p><span class="numberCircle">1 </span> Create an account</p> 
+            
+             <p><span class="numberCircle">2 </span> Keep track of your transactions</p>
+            
+             <p><span class="numberCircle">3</span>Budget for Items you see in your near future</p>
              </font>
          <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
     </div>
@@ -31,15 +28,17 @@
             <p>
                 Hard work pays off! Open an account today!
             </p>
-         
+             
             <p><a class="btn btn-default" href="/Account/Register/" title="Register">Register</a></p>
         </div>
         <div class="col-md-4">
             <h2>Get More </h2>
             <p>Save up for Items with our Wishlist feature.</p>
             <p><a class="btn btn-default" href="/WishlistItems/" title="Wishlist Items">Wishlist Items</a></p>
-        </div>
-       
+
+               </div>
+        <align-right><img height="300" width="300" src="~/content/computer looker 2.jpg" /></align-right>
+
     </div>
 
 </body>
