--- a/ParentsBank/Views/WishlistItems/Delete.cshtml
+++ b/ParentsBank/Views/WishlistItems/Delete.cshtml
@@ -36,6 +36,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Name)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Name)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Cost)
         </dt>
 
