--- a/ParentsBank/Views/WishlistItems/Details.cshtml
+++ b/ParentsBank/Views/WishlistItems/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Details";
 }
 
-<h2>wishlist Item Details</h2>
+<h2>Wishlist Item Details</h2>
 
 <div>
     <h4>WishlistItem</h4>
@@ -32,6 +32,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.DateAdded)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Name)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Name)
         </dd>
 
         <dt>
