--- a/ParentsBank/Views/WishlistItems/Edit.cshtml
+++ b/ParentsBank/Views/WishlistItems/Edit.cshtml
@@ -3,7 +3,12 @@
 @{
     ViewBag.Title = "Edit";
 }
-
+<ol class="breadcrumb">
+    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+    <li>@Html.ActionLink(Model.Account.Name+"'s Wishlist", "Index", "WishlistItems", new { id = Model.Account.Id }, new { })</li>
+    <li>@Html.ActionLink(Model.Name, "Details", "WishlistItems", new { id = Model.Id }, new { })</li>
+    <li class="active">Edit</li>
+</ol>
 <h2>Edit Wishlist</h2>
 
 @using (Html.BeginForm())
@@ -29,6 +34,14 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.DateAdded, new { htmlAttributes = new { @class = "form-control readonly", @readonly = "readonly" } })
                 @Html.ValidationMessageFor(model => model.DateAdded, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
         </div>
 
