--- a/ParentsBank/Views/WishlistItems/Index.cshtml
+++ b/ParentsBank/Views/WishlistItems/Index.cshtml
@@ -3,7 +3,10 @@
 @{
     ViewBag.Title = "Index";
 }
-
+<ol class="breadcrumb">
+    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+    <li class="active">Wishlist</li>
+</ol>
 <h2>Wishlist Items</h2>
 
 <p>
@@ -34,6 +37,9 @@
                 @Html.DisplayNameFor(model => model.DateAdded)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Cost)
             </th>
             <th>
@@ -59,6 +65,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.DateAdded)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Cost)
