--- a/ParentsBank/Views/AccountDetails/Index.cshtml
+++ b/ParentsBank/Views/AccountDetails/Index.cshtml
@@ -3,7 +3,10 @@
 @{
     ViewBag.Title = "Index";
 }
-
+<ol class="breadcrumb">
+    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+    <li class="active">Accounts</li>
+</ol>
 <h2>Index</h2>
 
 <p>
