--- a/ParentsBank/Views/Home/Index.cshtml
+++ b/ParentsBank/Views/Home/Index.cshtml
@@ -1,9 +1,7 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-
-<html>
-<body style="background-color:#13ecec">
+<div>
 
     <div class="jumbotron"> 
          <font color="white" face="Cambria" > 
@@ -41,6 +39,4 @@
 
     </div>
 
-</body>
-
-</html>
+</div>
