--- a/ParentsBank/Views/Home/Contact.cshtml
+++ b/ParentsBank/Views/Home/Contact.cshtml
@@ -1,6 +1,10 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
+<ol class="breadcrumb">
+    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+    <li class="active">Contact</li>
+</ol>
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
