--- a/ParentsBank/Views/Transactions/Create.cshtml
+++ b/ParentsBank/Views/Transactions/Create.cshtml
@@ -3,7 +3,10 @@
 @{
     ViewBag.Title = "Create";
 }
-
+<ol class="breadcrumb">
+    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+    <li class="active">Create Transaction</li>
+</ol>
 <h2>Create Transaction</h2>
 
 @using (Html.BeginForm()) 
@@ -15,7 +18,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.AccountId, "AccountId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AccountId, "Account Id", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("AccountId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.AccountId, "", new { @class = "text-danger" })
