--- a/ParentsBank/Views/Transactions/Edit.cshtml
+++ b/ParentsBank/Views/Transactions/Edit.cshtml
@@ -3,7 +3,12 @@
 @{
     ViewBag.Title = "Edit";
 }
-
+<ol class="breadcrumb">
+    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+    <li>@Html.ActionLink(Model.Account.Name + "'s Transactions", "AccountTransactions", "Transactions", new { id = Model.Account.Id }, new { })</li>
+    <li>@Html.ActionLink("Transaction Details", "Details", "Transactions", new { id = Model.Id }, new { })</li>
+    <li class="active">Edit</li>
+</ol>
 <h2>Edit Transactions</h2>
 
 @using (Html.BeginForm())
@@ -17,9 +22,9 @@
         @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AccountId, "AccountId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AccountId, "Account Id", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("AccountId", null, htmlAttributes: new { @class = "form-control disabled", @disabled = "disabled" })
+                @Html.DropDownList("AccountId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.AccountId, "", new { @class = "text-danger" })
             </div>
         </div>
