--- a/ParentsBank/Views/Transactions/Index.cshtml
+++ b/ParentsBank/Views/Transactions/Index.cshtml
@@ -3,16 +3,28 @@
 @{
     ViewBag.Title = "Index";
 }
-
+<ol class="breadcrumb">
+    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+    @if (ViewBag.AccountId != null)
+    {
+        <li>@Html.ActionLink((string)ViewBag.AccountName + "'s Account", "Details", "AccountDetails", new { id = ViewBag.AccountId }, new { })</li>
+        ViewBag.AccountId = null;
+        ViewBag.AccountName = null;
+    }
+    <li class="active">Transactions</li>
+</ol>
 <h2>Transactions</h2>
-
+@if (ViewBag.Role == "Owner")
+{
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+}
 @if (Model.Count() > 0)
 {
     <table class="table">
         <tr>
+            <th></th>
             <th>
                 @Html.DisplayNameFor(model => model.Account.Owner)
             </th>
@@ -34,6 +46,16 @@
         @foreach (var item in Model)
         {
             <tr>
+                <td>
+                @if (item.Amount > 0)
+                {
+                    <span class="badge" style="background-color: #5cb85c;">&nbsp;</span>
+                }
+                else
+                {
+                    <span class="badge" style="background-color: #d9534f;">&nbsp;</span>
+                }
+                </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Account.Owner)
                 </td>
