--- a/ParentsBank/Views/WishlistItems/Search.cshtml
+++ b/ParentsBank/Views/WishlistItems/Search.cshtml
@@ -5,33 +5,61 @@
 }
 <ol class="breadcrumb">
     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-    @if (ViewBag.AccountId != null)
-    {
-        <li>@Html.ActionLink((string)ViewBag.AccountName + "'s Account", "Details", "AccountDetails", new { id = ViewBag.AccountId }, new { })</li>
-        ViewBag.AccountId = null;
-        ViewBag.AccountName = null;
-    }
-    <li class="active">Wishlist</li>
+    <li>@Html.ActionLink("Wishlist", "Index", "WishlistItems")</li>
+    <li class="active">Search</li>
 </ol>
-<h2>Wishlist Items</h2>
+<h2>Search Wishlist Items</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create") |
-    @Html.ActionLink("Search Items", "Search")
+    @Html.ActionLink("Create New", "Create")
 </p>
-@if (Model.Count() > 0)
+
+@using (Html.BeginForm("Search", "WishlistItems", FormMethod.Get))
 {
-    float completedItems = (float) ViewBag.CompletedItems * 100 / Model.Count();
-    float affordableItems = (float) ViewBag.AffordableItems * 100 / Model.Count();
-    float remainingItems = 100 - completedItems - affordableItems;
-    <div class="progress">
-        <div class="progress-bar progress-bar-success" role="progressbar" style="width:@completedItems%" title="@ViewBag.CompletedItems Purchased">
+    @Html.AntiForgeryToken()
+
+    <div class="form-horizontal">
+        <h4>Search Wishlist Item</h4>
+        <hr />
+        
+        <div class="form-group">
+            @Html.Label("Name", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.Editor("itemName", new { htmlAttributes = new { @class = "form-control" } })
+            </div>
         </div>
-        <div class="progress-bar progress-bar-warning" role="progressbar" style="width:@affordableItems%" title="@ViewBag.affordableItems Affordable">
+
+        <div class="form-group">
+            @Html.Label("Min Price", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.Editor("itemMinPrice", new { htmlAttributes = new { @class = "form-control" } })
+            </div>
         </div>
-        <div class="progress-bar progress-bar-danger" role="progressbar" style="width:@remainingItems%" title="@(Model.Count() - ViewBag.CompletedItems - ViewBag.affordableItems) Remaining">
+
+        <div class="form-group">
+            @Html.Label("Max Price", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.Editor("itemMaxPrice", new { htmlAttributes = new { @class = "form-control" } })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.Label("Description", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.Editor("itemDescription", new { htmlAttributes = new { @class = "form-control" } })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Search" class="btn btn-default" />
+            </div>
         </div>
     </div>
+}
+
+@if (Model.Count() > 0)
+{
     <table class="table">
         <tr>
             <th></th>
