--- a/ParentsBank/Views/AccountDetails/Index.cshtml
+++ b/ParentsBank/Views/AccountDetails/Index.cshtml
@@ -34,6 +34,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Balance)
             </th>
+            <th>
+                @Html.DisplayName("Interest Accrued")
+            </th>
             <th></th>
         </tr>
 
@@ -57,6 +60,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Balance)
+                </td>
+                <td>
+                    @item.CalculateInterestEarnedInCurrentYear()
                 </td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
