--- a/ParentsBank/Views/Home/Resources.cshtml
+++ b/ParentsBank/Views/Home/Resources.cshtml
@@ -7,7 +7,7 @@
 </ol>
     <div class="row">
         <br />
-        <div class="col-md-6 resource" style="border:solid black 3px; background-color:#ffff80" >
+        <div class="col-md-6 resource" style="border:solid black 1px; background-color:#ffff80" >
        
                 <p><strong>Parents</strong></p>
                 <p>Saving up for a big trip?</p>
@@ -17,12 +17,12 @@
                 </ul>
            
             <div>
-                <p><a class="btn btn-default" href="/WishlistItems/" title="Wishlist Items">Wishlist Items</a></p>
+                <p><a class="btn btn-default" href="http://www.investopedia.com/" title="Investment Options" target="_blank">Investment Options</a></p>
             </div>
 
         </div>
 
-        <div class="col-md-6 resource"style="border:solid black 3px; background-color:#ffff80">
+        <div class="col-md-6 resource"style="border:solid black 1px; background-color:#ffff80">
 
             <p><strong>Children</strong></p>
 
@@ -32,8 +32,7 @@
                 <li>Get a head start on College Funds</li>
             </ul>
             <div>
-
-                <p><a class="btn btn-default" href="http://www.investopedia.com/" title="Options" target="_blank">Options</a></p>
+                <p><a class="btn btn-default" href="http://www.moneyglare.com/the-importance-of-saving-money/" title="Saving Options" target="_blank">Saving Options</a></p>
             </div>
         </div>
     </div>
