--- a/ParentsBank/Views/AccountDetails/Create.cshtml
+++ b/ParentsBank/Views/AccountDetails/Create.cshtml
@@ -1,20 +1,19 @@
 ﻿@model ParentsBank.Models.AccountDetails
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Account";
 }
 <ol class="breadcrumb">
     <li>@Html.ActionLink("Home", "Index", "Home")</li>
     <li class="active">Create Account</li>
 </ol>
-<h2>Create</h2>
+<h2>Create Account</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>AccountDetails</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
