--- a/ParentsBank/Views/AccountDetails/Delete.cshtml
+++ b/ParentsBank/Views/AccountDetails/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ParentsBank.Models.AccountDetails
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Account";
 }
 <ol class="breadcrumb">
     <li>@Html.ActionLink("Home", "Index", "Home")</li>
@@ -12,11 +12,10 @@
     <li>@Html.ActionLink(@Model.Name + "'s Account", "Details", "AccountDetails", new { id = Model.Id }, new { })</li>
     <li class="active">Delete</li>
 </ol>
-<h2>Delete</h2>
+<h2>Delete Account</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Account Details</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -64,8 +63,23 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Balance)<br />
-            @Html.ValidationMessageFor(model => model.Balance, "", new { @class = "text-danger" })
+            @Html.DisplayFor(model => model.Balance)
+        </dd>
+
+        <dt>
+            @Html.DisplayName("Interest Accrued")
+        </dt>
+
+        <dd>
+            @Model.CalculateInterestEarnedInCurrentYear()
+        </dd>
+        
+        <dt>
+            @Html.DisplayName("Last Deposit Date")
+        </dt>
+        
+        <dd>
+            @Model.GetLastTransactionDate()
         </dd>
 
     </dl>
@@ -74,8 +88,15 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @if (Model.Balance == 0)
+            {
+                <input type="submit" value="Delete" class="btn btn-default" />
+            }
+            else
+            {
+                <input type="submit" value="Delete" class="btn btn-default disabled" />
+            }
+            | @Html.ActionLink("Back to List", "Index")
         </div>
     }
 </div>
