--- a/ParentsBank/Views/Home/Index.cshtml
+++ b/ParentsBank/Views/Home/Index.cshtml
@@ -3,40 +3,75 @@
 }
 <div>
 
-    <div class="jumbotron"> 
-         <font color="white" face="Cambria" > 
-        
-        <align-left><h2><b><font face="Felix Titling" size="32">Welcome to ParentsBank</font></b></h2></align-left>
-        <p><strong>The sky is the limit and we can help you make important financial decisions:</strong></p>
-        
-            
-            
-             <p><span class="numberCircle">1 </span> Create an account</p> 
-            
-             <p><span class="numberCircle">2 </span> Keep track of your transactions</p>
-            
-             <p><span class="numberCircle">3</span>Budget for Items you see in your near future</p>
-             </font>
-         <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <div class="jumbotron">
+        <font color="white" face="Cambria">
+
+            <align-left><h2><b><font face="Felix Titling" size="32">Welcome to ParentsBank</font></b></h2></align-left>
+            <p><strong>The sky is the limit and we can help you make important financial decisions:</strong></p>
+
+
+
+            <p><span class="numberCircle">1 </span> Create an account</p>
+
+            <p><span class="numberCircle">2 </span> Keep track of your transactions</p>
+
+            <p><span class="numberCircle">3</span>Budget for Items you see in your near future</p>
+        </font>
+        <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
     </div>
 
     <div class="row">
-        <div class="col-md-4">
-            <h2>Getting started</h2>
-            <p>
-                Hard work pays off! Open an account today!
-            </p>
-             
-            <p><a class="btn btn-default" href="/Account/Register/" title="Register">Register</a></p>
+        @if (!Request.IsAuthenticated)
+        {
+            <div class="col-md-4">
+                <h2>Getting started</h2>
+                <p>
+                    Hard work pays off! Open an account today!
+                </p>
+
+                <p><a class="btn btn-default" href="/Account/Register/" title="Register">Register</a></p>
+            </div>
+        }
+        else
+        {
+            <div class="col-md-4">
+                <h2>Get More </h2>
+                <p>Save up for Items with our Wishlist feature.</p>
+                <p><a class="btn btn-default" href="/WishlistItems/" title="Wishlist Items">Wishlist Items</a></p>
+
+            </div>
+        }
+        <div class="col-md-4"></div>
+        <div class="col-md-4 pull-right">
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                </ol>
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <img src="~/Content/Credit.jpg"/>
+                    </div>
+                    <div class="item">
+                        <img src="~/Content/FX.jpg"/>
+                    </div>
+                    <div class="item">
+                        <img src="~/Content/Investment.png"/>
+                    </div>
+                </div>
+                <!-- Controls -->
+                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
         </div>
-        <div class="col-md-4">
-            <h2>Get More </h2>
-            <p>Save up for Items with our Wishlist feature.</p>
-            <p><a class="btn btn-default" href="/WishlistItems/" title="Wishlist Items">Wishlist Items</a></p>
-
-               </div>
-        <align-right><img height="300" width="300" src="~/content/computer looker 2.jpg" /></align-right>
-
     </div>
-
 </div>
