--- a/ParentsBank/Views/Shared/_Layout.cshtml
+++ b/ParentsBank/Views/Shared/_Layout.cshtml
@@ -29,7 +29,6 @@
                         <li>@Html.ActionLink("Wishlist Items", "Index", "WishlistItems")</li>
                     }
                     <li>@Html.ActionLink("Financial Resources", "Resources", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -38,8 +37,10 @@
     
     <div class="container body-content">
         @RenderBody()
-
-
+        <hr/>
+        <footer>
+            <p>&copy; 2016 - Parents Bank</p>
+        </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
