--- a/ParentsBank/Views/Transactions/Create.cshtml
+++ b/ParentsBank/Views/Transactions/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ParentsBank.Models.Transaction
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Transaction";
 }
 <ol class="breadcrumb">
     <li>@Html.ActionLink("Home", "Index", "Home")</li>
@@ -14,7 +14,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Transaction</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
