--- a/ParentsBank/Views/Transactions/Delete.cshtml
+++ b/ParentsBank/Views/Transactions/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ParentsBank.Models.Transaction
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Transaction";
 }
 <ol class="breadcrumb">
     <li>@Html.ActionLink("Home", "Index", "Home")</li>
@@ -13,7 +13,6 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Transaction</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
