--- a/ParentsBank/Views/Transactions/Details.cshtml
+++ b/ParentsBank/Views/Transactions/Details.cshtml
@@ -1,17 +1,16 @@
 ﻿@model ParentsBank.Models.Transaction
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "View Transaction";
 }
 <ol class="breadcrumb">
     <li>@Html.ActionLink("Home", "Index", "Home")</li>
     <li>@Html.ActionLink(Model.Account.Name + "'s Transactions", "AccountTransactions", "Transactions", new { id = Model.Account.Id }, new { })</li>
     <li class="active">Transaction Details</li>
 </ol>
-<h2>Transaction Details</h2>
+<h2>View Transaction</h2>
 
 <div>
-    <h4>Transaction</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -57,6 +56,9 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @if (ViewBag.Role == "Owner")
+    {
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) <span>|</span>
+    }
     @Html.ActionLink("Back to List", "Index")
 </p>
