--- a/ParentsBank/Views/Transactions/Edit.cshtml
+++ b/ParentsBank/Views/Transactions/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ParentsBank.Models.Transaction
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Transaction";
 }
 <ol class="breadcrumb">
     <li>@Html.ActionLink("Home", "Index", "Home")</li>
@@ -9,14 +9,13 @@
     <li>@Html.ActionLink("Transaction Details", "Details", "Transactions", new { id = Model.Id }, new { })</li>
     <li class="active">Edit</li>
 </ol>
-<h2>Edit Transactions</h2>
+<h2>Edit Transaction</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Transaction</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
