--- a/ParentsBank/Views/WishlistItems/Create.cshtml
+++ b/ParentsBank/Views/WishlistItems/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ParentsBank.Models.WishlistItem
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Wishlist Item";
 }
 <ol class="breadcrumb">
     <li>@Html.ActionLink("Home", "Index", "Home")</li>
@@ -14,7 +14,6 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>WishlistItem</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
