--- a/ParentsBank/Views/WishlistItems/Delete.cshtml
+++ b/ParentsBank/Views/WishlistItems/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ParentsBank.Models.WishlistItem
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Wishlist Item";
 }
 <ol class="breadcrumb">
     <li>@Html.ActionLink("Home", "Index", "Home")</li>
@@ -13,7 +13,6 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>WishlistItem</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -77,8 +76,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Purchased)<br />
-            @Html.ValidationMessageFor(model => model.Purchased, "", new { @class = "text-danger" })
+            @Html.DisplayFor(model => model.Purchased)
         </dd>
 
     </dl>
