--- a/ParentsBank/Views/WishlistItems/Search.cshtml
+++ b/ParentsBank/Views/WishlistItems/Search.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ParentsBank.Models.WishlistItem>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Search Wishlist Items";
 }
 <ol class="breadcrumb">
     <li>@Html.ActionLink("Home", "Index", "Home")</li>
@@ -19,7 +19,6 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Search Wishlist Item</h4>
         <hr />
         
         <div class="form-group">
@@ -133,8 +132,11 @@
                 </td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    @Html.ActionLink("Details", "Details", new { id = item.Id })
+                    @if (ViewBag.Role == "Owner")
+                    {
+                        <span>|</span> @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    }
                 </td>
             </tr>
         }
