Updated with bug fix

--- a/ParentsBank/Views/Home/Index.cshtml
+++ b/ParentsBank/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
 
             <p><span class="numberCircle">3</span>Budget for Items you see in your near future</p>
         </font>
-        <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+        <p><a href="/Account/Login/" class="btn btn-primary btn-lg">Login &raquo;</a></pstyle>
     </div>
 
     <div class="row">
