--- a/ParentsBank/Views/AccountDetails/Details.cshtml
+++ b/ParentsBank/Views/AccountDetails/Details.cshtml
@@ -14,6 +14,17 @@
 <h2>View Account</h2>
 
 <div>
+    @{
+        double totalBalance = Model.Balance + Model.CalculateInterestEarnedInCurrentYear();
+        double balancePct = Model.Balance*100 / totalBalance;
+        double intPct = Model.CalculateInterestEarnedInCurrentYear()*100 / totalBalance;
+        <div class="progress">
+            <div class="progress-bar progress-bar-success" role="progressbar" style="width:@balancePct%" title="@Model.Balance">
+            </div>
+            <div class="progress-bar progress-bar-warning" role="progressbar" style="width:@intPct%" title="@Model.CalculateInterestEarnedInCurrentYear()">
+            </div>
+        </div>
+    }
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -63,7 +74,7 @@
         <dd>
             @Html.DisplayFor(model => model.Balance)
         </dd>
-        
+
         <dt>
             @Html.DisplayName("Interest Accrued")
         </dt>
@@ -77,7 +88,7 @@
         </dt>
 
         <dd>
-            @(Model.Balance+Model.CalculateInterestEarnedInCurrentYear())
+            @(Model.Balance + Model.CalculateInterestEarnedInCurrentYear())
         </dd>
 
         <dt>
