Updated home page

--- a/ParentsBank/Views/Home/Index.cshtml
+++ b/ParentsBank/Views/Home/Index.cshtml
@@ -6,8 +6,8 @@
     <div class="jumbotron">
         <font color="white" face="Cambria">
 
-            <align-left><h2><b><font face="Felix Titling" size="32">Welcome to ParentsBank</font></b></h2></align-left>
-            <p><strong>The sky is the limit and we can help you make important financial decisions:</strong></p>
+            <align-left><h2><b><font face="'Helvetica Neue'" size="32">Welcome to ParentsBank</font></b></h2></align-left>
+            <p><strong>Save for your dreams ... The sky is the limit!</strong></p>
 
 
 
